mudando o html geral

--- a/Desktop/FormulaESite/index.html
+++ b/Desktop/FormulaESite/index.html
@@ -30,7 +30,7 @@
     <img id="imgBanner">
         
 <section id="bcorridas">
-    <button id="botão1">mamaeueosamigos</button>
+    <button id="botão1">mamaeuagr</button>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam suscipit dignissimos, minus sapiente eum doloribus, sint quod blanditiis asperiores quam nulla dolores sit, beatae ipsam veritatis odio rem? Molestiae, aspernatur?</p>
     <img src="./src/img/carro.png" alt="">
 </section>
