fazendo botão para mudar a cor do fundo

--- a/Desktop/FormulaESite/index.html
+++ b/Desktop/FormulaESite/index.html
@@ -27,15 +27,15 @@
     </header>
 
     <div class="container">
-        <div class="slider-wrapper">
+       <div class="slider-wrapper">
           <button id="prev-slide" class="slide-button material-symbols-rounded">
             <
           </button>
           <ul class="image-list">
-            <a href=""><img class="image-item" src="./src/img/Formula E News.png" alt="img-1" /></a>
-            <a href=""><img class="image-item" src="./src/img/img 2.png" alt="img-2" /></a>
-            <a href=""><img class="image-item" src="./src/img/img 3.png" alt="img-3" /></a>
-            <a href=""><img class="image-item" src="./src/img/img4.png" alt="img-4" /></a>
+            <a href=""><img class="image-item" src="./src/img/1.png" alt="img-1" /></a>
+            <a href=""><img class="image-item" src="./src/img/2.png" alt="img-2" /></a>
+            <a href=""><img class="image-item" src="./src/img/3.png" alt="img-3" /></a>
+            <a href=""><img class="image-item" src="./src/img/4.png" alt="img-4" /></a>
           </ul>
           <button id="next-slide" class="slide-button material-symbols-rounded">
             >
@@ -46,18 +46,18 @@
             <div class="scrollbar-thumb"></div>
           </div>
         </div>
-      </div>
+    </div>
         
 <section id="bcorridas">
     <button id="botão1">fodase</button>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam suscipit dignissimos, minus sapiente eum doloribus, sint quod blanditiis asperiores quam nulla dolores sit, beatae ipsam veritatis odio rem? Molestiae, aspernatur?</p>
-    <img src="./src/img/carro.png" alt="">
+    <img src="./src/img/carro.png" alt="carro" id="carroimg">
 </section>
 <section id="bpilotos">
     <button id="botão2">mamuuj</button>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam suscipit dignissimos, minus sapiente eum doloribus, sint quod blanditiis asperiores quam nulla dolores sit, beatae ipsam veritatis odio rem? Molestiae, aspernatur?</p>
 </section>
-
+<button class="btn" onclick="mudarCor()"><img src="./src/img/icons8-moon-and-stars-96.png" alt=""></button>
 <footer><h4>@2024- Todos direitos reservados à Data Sphere Solutions e Mahindra
 </h4>
 </footer>
