--- a/Desktop/FormulaESite/index.html
+++ b/Desktop/FormulaESite/index.html
@@ -58,6 +58,7 @@
 <section id="bpilotos">
     <button id="botão2">mamuuj</button>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam suscipit dignissimos, minus sapiente eum doloribus, sint quod blanditiis asperiores quam nulla dolores sit, beatae ipsam veritatis odio rem? Molestiae, aspernatur?</p>
+    <img src="" alt="piloto" id="pilotoimg">
 </section>
 <button class="btn" onclick="mudarCor()"><img src="./src/img/icons8-moon-and-stars-96.png" alt=""></button>
 <footer><h4>@2024- Todos direitos reservados à Data Sphere Solutions e Mahindra
