--- a/Desktop/FormulaESite/index.html
+++ b/Desktop/FormulaESite/index.html
@@ -54,14 +54,14 @@
 
 <hr>    
 <section id="bcorridas">
-    <button id="botão1">CORRIDAS</button>
-    <p id="">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam suscipit dignissimos, minus sapiente eum doloribus, sint quod blanditiis asperiores quam nulla dolores sit, beatae ipsam veritatis odio rem? Molestiae, aspernatur?</p>
+    <button class="botaoo">CORRIDAS</button>
+    <p class="txt">Acompanhe os horários, datas, locais e canais para as corridas dos melhores campeonatos de Formula E. </p>
     <img src="./src/img/carro.png" alt="carro" id="carroimg">
 </section>
 <hr>
 <section id="bpilotos">
-    <button id="botão2">mamuuj</button>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam suscipit dignissimos, minus sapiente eum doloribus, sint quod blanditiis asperiores quam nulla dolores sit, beatae ipsam veritatis odio rem? Molestiae, aspernatur?</p>
+    <button class="botaoo">mamuuj</button>
+    <p class="txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam suscipit dignissimos, minus sapiente eum doloribus, sint quod blanditiis asperiores quam nulla dolores sit, beatae ipsam veritatis odio rem? Molestiae, aspernatur?</p>
     <img src="" alt="piloto" id="pilotoimg">
 </section>
 
