--- a/Desktop/FormulaESite/index.html
+++ b/Desktop/FormulaESite/index.html
@@ -32,8 +32,8 @@
             <
           </button>
           <ul class="image-list">
-            <a href=""><img class="image-item" src="./src/img/1.png" alt="img-1" /></a>
-            <a href=""><img class="image-item" src="./src/img/2.png" alt="img-2" /></a>
+            <a href="#bnews"><img class="image-item" src="./src/img/1.png" alt="img-1" /></a>
+            <a href="#bcorridas"><img class="image-item" src="./src/img/2.png" alt="img-2" /></a>
             <a href=""><img class="image-item" src="./src/img/3.png" alt="img-3" /></a>
             <a href=""><img class="image-item" src="./src/img/4.png" alt="img-4" /></a>
           </ul>
@@ -54,13 +54,13 @@
 
 <hr>    
 <section id="bcorridas">
-    <button class="botaoo">CORRIDAS</button>
+    <a class="botaoo" href="./Corridas.html">Corridas</a>
     <p class="txt">Acompanhe os horários, datas, locais e canais para as corridas dos melhores campeonatos de Formula E. </p>
     <img src="./src/img/carro.png" alt="carro" id="carroimg">
 </section>
 <hr>
-<section id="bpilotos">
-    <button class="botaoo">mamuuj</button>
+<section id="bnews">
+    <a class="botaoo">FE News</a>
     <p class="txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam suscipit dignissimos, minus sapiente eum doloribus, sint quod blanditiis asperiores quam nulla dolores sit, beatae ipsam veritatis odio rem? Molestiae, aspernatur?</p>
     <img src="" alt="piloto" id="pilotoimg">
 </section>
