colocando uma foto nova

--- a/Desktop/FormulaESite/Corridas.html
+++ b/Desktop/FormulaESite/Corridas.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formula E |Corridas</title>
+    <title>Formula E | Corridas</title>
+    <link rel="stylesheet" href="./src/css/estilo.css">
+    <link rel="icon" href="./src/img/Formula-e-logo-championship_2023.svg-removebg-preview-removebg-preview.png">
 </head>
 <body>
-    
+    <header>
+        <a href="./index.html">
+            <img src="./src/img/Formula-e-logo-championship_2023.svg-removebg-preview.png" alt="logo" id="logo">
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="./index.html">VOLTAR</a>
+                    
+                </li>
+                <li>
+                    <a href="">CADASTRE-SE</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+
+
+    <div id="botão">
+        <button class="btn" onclick="mudarCor()"><img src="./src/img/icons8-moon-and-stars-96.png" alt=""></button>
+    </div>
+    <script src="./src/js/script.js"></script>
 </body>
 </html>
