--- a/Desktop/FormulaESite/index.html
+++ b/Desktop/FormulaESite/index.html
@@ -62,8 +62,9 @@
 <section id="bnews">
     <a class="botaoo">FE News</a>
     <p class="txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam suscipit dignissimos, minus sapiente eum doloribus, sint quod blanditiis asperiores quam nulla dolores sit, beatae ipsam veritatis odio rem? Molestiae, aspernatur?</p>
-    <img src="" alt="piloto" id="pilotoimg">
+    <img src="./src/img/pilotoFormulaE.png" alt="piloto" id="pilotoimg">
 </section>
+<hr>
 
 <footer><h4>@2024- Todos direitos reservados à Data Sphere Solutions e Mahindra
 </h4>
