--- a/Desktop/FormulaESite/index.html
+++ b/Desktop/FormulaESite/index.html
@@ -16,10 +16,6 @@
         <nav>
             <ul>
                 <li>
-                    <a href="">CORRIDAS</a>
-                    
-                </li>
-                <li>
                     <a href="">CADASTRE-SE</a>
                 </li>
             </ul>
@@ -33,9 +29,9 @@
           </button>
           <ul class="image-list">
             <a href="#bnews"><img class="image-item" src="./src/img/1.png" alt="img-1" /></a>
-            <a href="#bcorridas"><img class="image-item" src="./src/img/2.png" alt="img-2" /></a>
-            <a href=""><img class="image-item" src="./src/img/3.png" alt="img-3" /></a>
-            <a href=""><img class="image-item" src="./src/img/4.png" alt="img-4" /></a>
+            <a href="#bpilotos"><img class="image-item" src="./src/img/2.png" alt="img-2" /></a>
+            <a href="#bcorridas"><img class="image-item" src="./src/img/3.png" alt="img-3" /></a>
+            <a href="#bpalestras"><img class="image-item" src="./src/img/4.png" alt="img-4" /></a>
           </ul>
           <button id="next-slide" class="slide-button material-symbols-rounded">
             >
@@ -55,14 +51,26 @@
 <hr>    
 <section id="bcorridas">
     <a class="botaoo" href="./Corridas.html">Corridas</a>
-    <p class="txt">Acompanhe os horários, datas, locais e canais para as corridas dos melhores campeonatos de Formula E. </p>
+    <p class="txt1">Acompanhe os horários, datas, locais e canais para as corridas dos melhores campeonatos de Formula E. </p>
     <img src="./src/img/carro.png" alt="carro" id="carroimg">
 </section>
 <hr>
 <section id="bnews">
     <a class="botaoo">FE News</a>
-    <p class="txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam suscipit dignissimos, minus sapiente eum doloribus, sint quod blanditiis asperiores quam nulla dolores sit, beatae ipsam veritatis odio rem? Molestiae, aspernatur?</p>
-    <img src="./src/img/pilotoFormulaE.png" alt="piloto" id="pilotoimg">
+    <p class="txt2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam suscipit dignissimos, minus sapiente eum doloribus, sint quod blanditiis asperiores quam nulla dolores sit, beatae ipsam veritatis odio rem? Molestiae, aspernatur?</p>
+    <img src="./src/img/jornal.png" alt="piloto" id="pilotoimg">
+</section>
+<hr>
+<section id="bpalestras">
+  <a class="botaoo" href="./Corridas.html">Palestras</a>
+  <p class="txt1">Acompanhe os horários, datas, locais e canais para as corridas dos melhores campeonatos de Formula E. </p>
+  <img src="./src/img/carro.png" alt="carro" id="carroimg">
+</section>
+<hr>
+<section id="bpilotos">
+  <a class="botaoo">Pilotos</a>
+  <p class="txt2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam suscipit dignissimos, minus sapiente eum doloribus, sint quod blanditiis asperiores quam nulla dolores sit, beatae ipsam veritatis odio rem? Molestiae, aspernatur?</p>
+  <img src="./src/img/pilotoFormulaE.png" alt="piloto" id="pilotoimg">
 </section>
 <hr>
 
