--- a/Desktop/FormulaESite/pilotos.html
+++ b/Desktop/FormulaESite/pilotos.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="">CORRIDAS</a>
+                    <a href="">SAIR</a>
                     
                 </li>
                 <li>
