alterando o pilotos.html

--- a/Desktop/FormulaESite/index.html
+++ b/Desktop/FormulaESite/index.html
@@ -62,13 +62,13 @@
 </section>
 <hr>
 <section id="bpalestras">
-  <a class="botaoo" href="./Corridas.html">Palestras</a>
+  <a class="botaoo">Palestras</a>
   <p class="txt1">Acompanhe os horários, datas, locais e canais para as corridas dos melhores campeonatos de Formula E. </p>
   <img src="./src/img/carro.png" alt="carro" id="carroimg">
 </section>
 <hr>
 <section id="bpilotos">
-  <a class="botaoo">Pilotos</a>
+  <a class="botaoo" href="./pilotos.html">Pilotos</a>
   <p class="txt2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam suscipit dignissimos, minus sapiente eum doloribus, sint quod blanditiis asperiores quam nulla dolores sit, beatae ipsam veritatis odio rem? Molestiae, aspernatur?</p>
   <img src="./src/img/pilotoFormulaE.png" alt="piloto" id="pilotoimg">
 </section>
