começando a fazer o slide show da pagina de corridas

--- a/Desktop/FormulaESite/Corridas.html
+++ b/Desktop/FormulaESite/Corridas.html
@@ -35,7 +35,7 @@
              <a href="#bnews"><img class="image-item" src="./src/img/1.png" alt="img-1" /></a>
              <a href="#bpilotos"><img class="image-item" src="./src/img/2.png" alt="img-2" /></a>
              <a href="#bcorridas"><img class="image-item" src="./src/img/3.png" alt="img-3" /></a>
-             <a href="#bpalestras"><img class="image-item" src="./src/img/4.png" alt="img-4" /></a>
+             <a hr"><img class="image-item" src="./src/img/4.png" alt="img-4" /></a>
            </ul>
            <button id="next-slide" class="slide-button material-symbols-rounded">
              >
