colocando logos no footer

--- a/Desktop/FormulaESite/index.html
+++ b/Desktop/FormulaESite/index.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="">CADASTRE-SE</a>
+                    <a href="./cadastro.html">CADASTRE-SE</a>
                 </li>
             </ul>
         </nav>
@@ -28,7 +28,6 @@
             <
           </button>
           <ul class="image-list">
-            <a href="#bnews"><img class="image-item" src="./src/img/1.png" alt="img-1" /></a>
             <a href="#bpilotos"><img class="image-item" src="./src/img/2.png" alt="img-2" /></a>
             <a href="#bcorridas"><img class="image-item" src="./src/img/3.png" alt="img-3" /></a>
             <a href="#bpalestras"><img class="image-item" src="./src/img/4.png" alt="img-4" /></a>
@@ -55,12 +54,6 @@
     <img src="./src/img/carro.png" alt="carro" id="carroimg">
 </section>
 <hr>
-<section id="bnews">
-    <a class="botaoo">FE News</a>
-    <p class="txt2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam suscipit dignissimos, minus sapiente eum doloribus, sint quod blanditiis asperiores quam nulla dolores sit, beatae ipsam veritatis odio rem? Molestiae, aspernatur?</p>
-    <img src="./src/img/jornal.png" alt="piloto" id="pilotoimg">
-</section>
-<hr>
 <section id="bpalestras">
   <a class="botaoo">Palestras</a>
   <p class="txt1">Acompanhe os horários, datas, locais e canais para as corridas dos melhores campeonatos de Formula E. </p>
@@ -74,7 +67,13 @@
 </section>
 <hr>
 
-<footer><h4>@2024- Todos direitos reservados à Data Sphere Solutions e Mahindra
+<footer>
+  <div id="logos">
+    <img src="./src/img/mahindra.png" alt="mahindra" id="m">
+    <img src="./src/img/Data_Sphere 1.png" alt="data-sphere" id="d">
+    <img src="./src/img/fiap.png" alt="fiap" id="f">
+  </div>
+  <h4>@2024- Todos direitos reservados à Data Sphere Solutions e Mahindra
 </h4>
 </footer>
 
