adiiconando as fotos do slideshow das corridas

--- a/Desktop/FormulaESite/Corridas.html
+++ b/Desktop/FormulaESite/Corridas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formula E | Corridas</title>
-    <link rel="stylesheet" href="./src/css/estilo.css">
+    <link rel="stylesheet" href="./src/css/corridas.css">
     <link rel="icon" href="./src/img/Formula-e-logo-championship_2023.svg-removebg-preview-removebg-preview.png">
 </head>
 <body>
@@ -32,10 +32,10 @@
              <
            </button>
            <ul class="image-list">
-             <a href=""><img class="image-item" src="./src/img/1.png" alt="img-1" /></a>
-             <a href=""><img class="image-item" src="./src/img/2.png" alt="img-2" /></a>
-             <a href=""><img class="image-item" src="./src/img/3.png" alt="img-3" /></a>
-             <a href=""><img class="image-item" src="./src/img/4.png" alt="img-4" /></a>
+             <a href=""><img class="image-item" src="./src/img/nepal.png" alt="img-1" /></a>
+             <a href=""><img class="image-item" src="./src/img/brasil.png" alt="img-2" /></a>
+             <a href=""><img class="image-item" src="./src/img/canada.png" alt="img-3" /></a>
+             <a href=""><img class="image-item" src="./src/img/chile.png" alt="img-4" /></a><a href=""><img class="image-item" src="./src/img/japao.png" alt="img-4" /></a>
            </ul>
            <button id="next-slide" class="slide-button material-symbols-rounded">
              >
@@ -52,5 +52,16 @@
         <button class="btn" onclick="mudarCor()"><img src="./src/img/icons8-moon-and-stars-96.png" alt=""></button>
     </div>
     <script src="./src/js/script.js"></script>
+
+    <footer>
+      <hr>
+      <div id="logos">
+        <img src="./src/img/mahindra.png" alt="mahindra" id="m">
+        <img src="./src/img/Data_Sphere 1.png" alt="data-sphere" id="d">
+        <img src="./src/img/fiap.png" alt="fiap" id="f">
+      </div>
+      <h4>@2024- Todos direitos reservados à Data Sphere Solutions e Mahindra
+    </h4>
+    </footer>
 </body>
 </html>
