--- a/Desktop/FormulaESite/cadastro.html
+++ b/Desktop/FormulaESite/cadastro.html
@@ -28,10 +28,10 @@
         </div>
             <div class="dados">
                 <label for="user"></label>
-                <input type="text" class="userhtml" placeholder="Usuário">
+                <input type="text" id="userhtml" placeholder="Usuário">
                 
                 <label for="senha"></label>
-                <input type="password" class="userhtml" placeholder="Senha:">
+                <input type="password" id="senhahtml" placeholder="Senha:">
             </div>
 
             <div class="confirmacao">
