--- a/Desktop/FormulaESite/index.html
+++ b/Desktop/FormulaESite/index.html
@@ -28,7 +28,7 @@
             <
           </button>
           <ul class="image-list">
-            <a href="#bpilotos"><img class="image-item" src="./src/img/2.png" alt="img-2" /></a>
+            <a href="#bpilotos"><img class="image-item" src="./src/img/Formula E News.png" alt="img-2" /></a>
             <a href="#bcorridas"><img class="image-item" src="./src/img/3.png" alt="img-3" /></a>
             <a href="#bpalestras"><img class="image-item" src="./src/img/4.png" alt="img-4" /></a>
           </ul>
