Criando o texto dos pilotos

--- a/Desktop/FormulaESite/index.html
+++ b/Desktop/FormulaESite/index.html
@@ -62,7 +62,7 @@
 <hr>
 <section id="bpilotos">
   <a class="botaoo" href="pilotos.html">Pilotos</a>
-  <p class="txt2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam suscipit dignissimos, minus sapiente eum doloribus, sint quod blanditiis asperiores quam nulla dolores sit, beatae ipsam veritatis odio rem? Molestiae, aspernatur?</p>
+  <p class="txt2">Conheça nossos corredores, acompanhe a preparação para cada corrida e o ranking que estão.</p>
   <img src="./src/img/pilotoFormulaE.png" alt="piloto" id="pilotoimg">
 </section>
 
