adicionando section oculta na pagina de corridas

--- a/Desktop/FormulaESite/Corridas.html
+++ b/Desktop/FormulaESite/Corridas.html
@@ -25,17 +25,18 @@
         </nav>
     </header>
 
-
+    <h1 id="titulo">Corridas</h1>
     <div class="container">
         <div class="slider-wrapper">
            <button id="prev-slide" class="slide-button material-symbols-rounded">
              <
            </button>
            <ul class="image-list">
-             <a href=""><img class="image-item" src="./src/img/nepal.png" alt="img-1" /></a>
-             <a href=""><img class="image-item" src="./src/img/brasil.png" alt="img-2" /></a>
-             <a href=""><img class="image-item" src="./src/img/canada.png" alt="img-3" /></a>
-             <a href=""><img class="image-item" src="./src/img/chile.png" alt="img-4" /></a><a href=""><img class="image-item" src="./src/img/japao.png" alt="img-4" /></a>
+             <button class="show-section-button" id="btn1"><img class="image-item" src="./src/img/nepal.png" alt="img-1" /></button>
+             <button class="show-section-button" id="btn2"><img class="image-item" src="./src/img/brasil.png" alt="img-2"/> </button>
+             <button class="show-section-button" id="btn3"><img class="image-item" src="./src/img/canada.png" alt="img-3" /></button>
+             <button class="show-section-button" id="btn4"><img class="image-item" src="./src/img/chile.png" alt="img-4" /></button>
+             <button class="show-section-button" id="btn5"><img class="image-item" src="./src/img/japao.png" alt="img-5" /></button>
            </ul>
            <button id="next-slide" class="slide-button material-symbols-rounded">
              >
@@ -53,6 +54,31 @@
     </div>
     <script src="./src/js/script.js"></script>
 
+    <section class="my-section hidden" id="sec1">
+      <h1 class="titulocorridas">Corrida Nepal, Katmandu</h1>
+      <p class="textocorridas">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit similique facere aliquam fuga distinctio aperiam ea ut quibusdam rem? Enim a, ipsa qui explicabo praesentium fugiat laboriosam exercitationem obcaecati in.</p>
+    </section>
+
+    <section class="my-section hidden" id="sec2">
+      <h1 class="titulocorridas">Corrida Brasil, Rio de Janeiro</h1>
+      <p class="textocorridas">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit similique facere aliquam fuga distinctio aperiam ea ut quibusdam rem? Enim a, ipsa qui explicabo praesentium fugiat laboriosam exercitationem obcaecati in.</p>
+    </section>
+
+    <section class="my-section hidden" id="sec3">
+      <h1 class="titulocorridas">Corrida Canada, Quebec</h1>
+      <p class="textocorridas">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit similique facere aliquam fuga distinctio aperiam ea ut quibusdam rem? Enim a, ipsa qui explicabo praesentium fugiat laboriosam exercitationem obcaecati in.</p>
+    </section>
+
+    <section class="my-section hidden" id="sec4">
+      <h1 class="titulocorridas">Corrida Chile, Santiago</h1>
+      <p class="textocorridas">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit similique facere aliquam fuga distinctio aperiam ea ut quibusdam rem? Enim a, ipsa qui explicabo praesentium fugiat laboriosam exercitationem obcaecati in.</p>
+    </section>
+
+    <section class="my-section hidden" id="sec5">
+      <h1 class="titulocorridas">Corrida Japão, Tóquio</h1>
+      <p class="textocorridas">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit similique facere aliquam fuga distinctio aperiam ea ut quibusdam rem? Enim a, ipsa qui explicabo praesentium fugiat laboriosam exercitationem obcaecati in.</p>
+    </section>
+    
     <footer>
       <hr>
       <div id="logos">
@@ -63,5 +89,7 @@
       <h4>@2024- Todos direitos reservados à Data Sphere Solutions e Mahindra
     </h4>
     </footer>
+
+    <script src="./src/js/corridas.js"></script>
 </body>
 </html>
