--- a/Desktop/FormulaESite/cadastro.html
+++ b/Desktop/FormulaESite/cadastro.html
@@ -39,7 +39,7 @@
             </div>
     </section>
 
-    <footer>
+    <footer id="footercadastro">
         <hr>
         <section id="logos">
           <img src="./src/img/mahindra.png" alt="mahindra" id="m">
