fazendo a foto dos pilotos para cada corrida

--- a/Desktop/FormulaESite/Corridas.html
+++ b/Desktop/FormulaESite/Corridas.html
@@ -57,6 +57,15 @@
     <section class="my-section hidden" id="sec1">
       <h1 class="titulocorridas">Corrida Nepal, Katmandu</h1>
       <p class="textocorridas">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit similique facere aliquam fuga distinctio aperiam ea ut quibusdam rem? Enim a, ipsa qui explicabo praesentium fugiat laboriosam exercitationem obcaecati in.</p>
+      <div class="textod">
+        <p>Pilotos</p>
+        <p>Pista</p>
+      </div>
+      <div class="fotosd">
+        <img src="./src/img/pilotos.png" alt="pilotos da corrida" class="fotospilotos">
+        <img src="./src/img/png-transparent-yas-marina-circuit-formula-1-electronic-circuit-race-track-formula-1-angle-text-hand-removebg-preview.png" alt="foto pista" class="fotospista">
+      </div>
+
     </section>
 
     <section class="my-section hidden" id="sec2">
