mudando html e links

--- a/Desktop/FormulaESite/Corridas.html
+++ b/Desktop/FormulaESite/Corridas.html
@@ -56,14 +56,14 @@
 
     <section class="my-section hidden" id="sec1">
       <h1 class="titulocorridas">Corrida Nepal, Katmandu</h1>
-      <p class="textocorridas">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit similique facere aliquam fuga distinctio aperiam ea ut quibusdam rem? Enim a, ipsa qui explicabo praesentium fugiat laboriosam exercitationem obcaecati in.</p>
+      <p class="textocorridas">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit similique facere aliquam fuga distinctio aperiam ea ut quibusdam rem? Enim a, ipsa qui explicabo bolsonarot laboriosam exercitationem obcaecati in.</p>
       <div class="textod">
         <p>Pilotos</p>
         <p>Pista</p>
       </div>
       <div class="fotosd">
         <img src="./src/img/pilotos.png" alt="pilotos da corrida" class="fotospilotos">
-        <img src="./src/img/png-transparent-yas-marina-circuit-formula-1-electronic-circuit-race-track-formula-1-angle-text-hand-removebg-preview.png" alt="foto pista" class="fotospista">
+        <img src="./src/img/png-transparent-circuit-of-the-americas-2018-fia-formula-one-world-championship-electronic-circuit-race-track-f1-white-text-hand-thumbnail-removebg-preview.png" alt="foto pista" class="fotospista">
       </div>
 
     </section>
@@ -71,6 +71,14 @@
     <section class="my-section hidden" id="sec2">
       <h1 class="titulocorridas">Corrida Brasil, Rio de Janeiro</h1>
       <p class="textocorridas">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit similique facere aliquam fuga distinctio aperiam ea ut quibusdam rem? Enim a, ipsa qui explicabo praesentium fugiat laboriosam exercitationem obcaecati in.</p>
+      <div class="textod">
+        <p>Pilotos</p>
+        <p>Pista</p>
+      </div>
+      <div class="fotosd">
+        <img src="./src/img/group 2.png" alt="pilotos da corrida" class="fotospilotos">
+        <img src="./src/img/png-transparent-silverstone-circuit-formula-one-information-diagram-united-kingdom-miscellaneous-white-text-removebg-preview.png" alt="foto pista" class="fotospista">
+      </div>
     </section>
 
     <section class="my-section hidden" id="sec3">
