Criando pagina de palestras

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </section>
 <hr>
 <section id="bpalestras">
-  <a class="botaoo">Palestras</a>
+  <a class="botaoo"  href="./palestras.html">Palestras</a>
   <p class="txt1">Acompanhe os horários, datas, locais e canais para as corridas dos melhores campeonatos de Formula E. </p>
   <img src="./src/img/boneco.png" alt="carro" id="bonecoimg">
 </section>
