terminando pagina de corridas

--- a/Corridas.html
+++ b/Corridas.html
@@ -55,7 +55,7 @@
 
     <section class="my-section hidden" id="sec1">
       <h1 class="titulocorridas">Corrida Nepal, Katmandu</h1>
-      <p class="textocorridas">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit similique facere aliquam fuga distinctio aperiam ea ut quibusdam rem? Enim a, ipsa qui explicabo bolsonarot laboratorio osam exercitationem obcaecati in.</p>
+      <p class="textocorridas">Corrida começa as 3:00 p.m. do dia 24/06/2024. Os corredores serão Jake Dennis, Stoffel Vandoorne, Sette Câmara, Maximillian Gunther e Sam Bird. A corrida terá 3 horas de duração. estará disponível no canal Bandeirantes.</p>
       <div class="textod">
         <p>Pilotos</p>
         <p>Pista</p>
@@ -69,7 +69,7 @@
 
     <section class="my-section hidden" id="sec2">
       <h1 class="titulocorridas">Corrida Brasil, Rio de Janeiro</h1>
-      <p class="textocorridas">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit similique facere aliquam fuga distinctio aperiam ea ut quibusdam rem? Enim a, ipsa qui explicabo praesentium fugiat laboriosam exercitationem obcaecati in.</p>
+      <p class="textocorridas">Corrida começa as 5:00 p.m. do dia 18/10/2024. Os corredores serão Sam Bird, Robin Frijns, António da Costa, Lucas Di Grassi e Stoffel Vandoorne. A corrida terá 2 horas e meia de duração. estará disponível no canal Bandeirantes.</p>
       <div class="textod">
         <p>Pilotos</p>
         <p>Pista</p>
@@ -82,7 +82,7 @@
 
     <section class="my-section hidden" id="sec3">
       <h1 class="titulocorridas">Corrida Canada, Quebec</h1>
-      <p class="textocorridas">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit similique facere aliquam fuga distinctio aperiam ea ut quibusdam rem? Enim a, ipsa qui explicabo praesentium fugiat laboriosam exercitationem obcaecati in.</p>
+      <p class="textocorridas">Corrida começa as 11:30 a.m. do dia 30/01/2024 Os corredores serão Lucas Di Grassi, Robin Frijns,Jake Dennis, Paul Aron e Maximillian Gunther. A corrida terá 6 horas e meia de duração. estará disponível no canal Bandeirantes.</p>
       <div class="textod">
         <p>Pilotos</p>
         <p>Pista</p>
@@ -95,7 +95,7 @@
 
     <section class="my-section hidden" id="sec4">
       <h1 class="titulocorridas">Corrida Chile, Santiago</h1>
-      <p class="textocorridas">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit similique facere aliquam fuga distinctio aperiam ea ut quibusdam rem? Enim a, ipsa qui explicabo praesentium fugiat laboriosam exercitationem obcaecati in.</p>
+      <p class="textocorridas">Corrida começa as 12:00 p.m. do dia 19/12/2024 Os corredores serão Paul Aron, Stoffel Vandoorne, Sette Câmara, António Da Costa e Lucas Di Grassi. A corrida terá 2 horas de duração. estará disponível no canal Bandeirantes.</p>
       <div class="textod">
         <p>Pilotos</p>
         <p>Pista</p>
@@ -108,7 +108,7 @@
 
     <section class="my-section hidden" id="sec5">
       <h1 class="titulocorridas">Corrida Japão, Tóquio</h1>
-      <p class="textocorridas">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit similique facere aliquam fuga distinctio aperiam ea ut quibusdam rem? Enim a, ipsa qui explicabo praesentium fugiat laboriosam exercitationem obcaecati in.</p>
+      <p class="textocorridas">Corrida começa as 17:00 p.m. do dia 04/03/2024 Os corredores serão Sam Bird, Robin Frijns, Jake Dennis, Jordan king e Maximilian Gunther. A corrida terá 1 hora e meia de duração. estará disponível no canal Bandeirantes.</p>
       <div class="textod">
         <p>Pilotos</p>
         <p>Pista</p>
